[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/entity/onvi2.png" type="Texture" id=1]
[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=2]
[ext_resource path="res://script/HammerLevel.gd" type="Script" id=3]
[ext_resource path="res://script/TouchScreenButton.gd" type="Script" id=4]
[ext_resource path="res://script/Light.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/entity/luz.png" type="Texture" id=7]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Animal.tscn" type="PackedScene" id=9]
[ext_resource path="res://script/TouchRight.gd" type="Script" id=10]
[ext_resource path="res://script/TouchAbduction.gd" type="Script" id=11]
[ext_resource path="res://assets/Fondo_Granja.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=9]
size = 61
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.15619, 237.346 )

[node name="HammerLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="CountDown" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.0
margin_right = 6.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="Background" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -713.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 1

[node name="TouchLeft" type="TouchScreenButton" parent="UI"]
position = Vector2( 28, 503 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
action = "touchLeft"
script = ExtResource( 4 )

[node name="TouchRight" type="TouchScreenButton" parent="UI"]
position = Vector2( 187, 655 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
action = "touchRight"
script = ExtResource( 10 )

[node name="TouchAbduction" type="TouchScreenButton" parent="UI"]
position = Vector2( 1248, 506 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
action = "abduction"
script = ExtResource( 11 )

[node name="Cow" parent="." instance=ExtResource( 9 )]
position = Vector2( 819, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/cow.png"

[node name="Chicken" parent="." instance=ExtResource( 9 )]
position = Vector2( 1012, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/chicken.png"

[node name="Panda" parent="." instance=ExtResource( 9 )]
position = Vector2( 575, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/panda.png"

[node name="Zebra" parent="." instance=ExtResource( 9 )]
position = Vector2( 1154, 645 )
collision_mask = 4
texture = "res://assets/kenney_animalpackredux/PNG/Round (outline)/zebra.png"

[node name="StaticBody2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 261, 97 )

[node name="Ufo" type="Sprite" parent="."]
position = Vector2( 813, 283 )
scale = Vector2( 0.280802, 0.254218 )
texture = ExtResource( 1 )

[node name="Light" type="Sprite" parent="Ufo"]
position = Vector2( 3.18652, 67.0938 )
scale = Vector2( 0.697964, -0.000697471 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Ufo/Light"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ufo/Light/Area2D"]
position = Vector2( 2.07861, 23.9139 )
shape = SubResource( 7 )

[node name="TimerAbduct" type="Timer" parent="Ufo/Light"]
wait_time = 4.0
one_shot = true

[node name="TimerReturnLight" type="Timer" parent="Ufo/Light"]
wait_time = 2.0
one_shot = true

[node name="TimerCountDown" type="Timer" parent="."]
autostart = true

[node name="TimerStart" type="Timer" parent="."]
wait_time = 2.79
one_shot = true
autostart = true

[node name="TimerGo" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerTimeGame" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="TimerFail" type="Timer" parent="."]
wait_time = 4.2

[node name="TimerWinnerOne" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerTwo" type="Timer" parent="."]
wait_time = 3.88

[node name="TimerWinnerThree" type="Timer" parent="."]
wait_time = 3.88

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -669.0
margin_top = -713.0
margin_right = 2246.0
margin_bottom = 1177.0
color = Color( 0, 0, 0, 0 )

[connection signal="pressed" from="UI/TouchLeft" to="UI/TouchLeft" method="_on_TouchLeft_pressed"]
[connection signal="pressed" from="UI/TouchRight" to="UI/TouchRight" method="_on_TouchRight_pressed"]
[connection signal="pressed" from="UI/TouchAbduction" to="UI/TouchAbduction" method="_on_TouchAbduction_pressed"]
[connection signal="body_entered" from="Ufo/Light/Area2D" to="Ufo/Light" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Ufo/Light/TimerAbduct" to="UI/TouchAbduction" method="_on_TimerAbduct_timeout"]
[connection signal="timeout" from="Ufo/Light/TimerReturnLight" to="UI/TouchAbduction" method="_on_TimerReturnLight_timeout"]
[connection signal="timeout" from="TimerCountDown" to="." method="_on_TimerCountDown_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="timeout" from="TimerGo" to="." method="_on_TimerGo_timeout"]
[connection signal="timeout" from="TimerTimeGame" to="." method="_on_TimerTimeGame_timeout"]
[connection signal="timeout" from="TimerFail" to="." method="_on_TimerFail_timeout"]
[connection signal="timeout" from="TimerWinnerOne" to="." method="_on_TimerWinnerOne_timeout"]
[connection signal="timeout" from="TimerWinnerTwo" to="." method="_on_TimerWinnerTwo_timeout"]
[connection signal="timeout" from="TimerWinnerThree" to="." method="_on_TimerWinnerThree_timeout"]
